welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : Int(1)
 required: Boolean
  while(1){
        ^SlugTracking:11: error: not found: value True
      return True
             ^